# Deep_Learning_Collection

./: .gitignore  Dockerfile  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt
notebooks/Andrej_Karpathy_Lecturures/: 1. micrograd.ipynb  Trigram_CharLevelModel.ipynb  Trigram_CharLevelRNN.ipynb  build_makemore_mlp.ipynb
notebooks/ComputerVision-Torch/: export model for production.ipynb
notebooks/famous-nn-architectures/: LeNet.ipynb  Transformer.ipynb  model.pt
notebooks/gan-mnist/: MNIST_GAN_Exercise.ipynb
notebooks/huggingface_tranformers/: 1. sentiment_classification.ipynb  2. self_attention.ipynb  3. multihead_attention.ipynb
notebooks/intro-to-pytorch/: Modules-Torch.ipynb  Part 1 - Tensors in PyTorch (Exercises).ipynb  Part 1 - Tensors in PyTorch (Solution).ipynb  Part 2 - Neural Networks in PyTorch (Exercises).ipynb  Part 2 - Neural Networks in PyTorch (Solution).ipynb  Part 3 - Training Neural Networks (Exercises).ipynb  Part 3 - Training Neural Networks (Solution).ipynb  Part 4 - Fashion-MNIST (Exercises).ipynb  Part 4 - Fashion-MNIST (Solution).ipynb  Part 5 - Inference and Validation (Exercises).ipynb  Part 5 - Inference and Validation (Solution).ipynb  Part 7 - Loading Image Data (Exercises).ipynb  Part 7 - Loading Image Data (Solution).ipynb  Part 8 - Transfer Learning (Solution).ipynb
notebooks/style-transfer/: model.py
notebooks/tranformers/: 2. self_attention.ipynb  BERT_sentiment_classification.ipynb  BERT_text_classification.ipynb  Language Modelling with torchtext.ipynb  transformers end-to-end with torch.ipynb
(+20 files in other folders)
